<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".Begining">

    <EditText
        android:id="@+id/TextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/autofill"
        android:backgroundTint="@color/strokeColor"
        android:gravity="center"
        android:hint="@string/nameText"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/nameTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btncolor"
        android:text="@string/btnImc"
        android:textColor="@color/white"
        android:textSize="@dimen/btnImcTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/TextPersonName"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="@id/TextPersonName"
        app:layout_constraintTop_toBottomOf="@id/TextPersonName"
        app:layout_constraintVertical_bias="0.09" />

    <Button
        android:id="@+id/btnCalcularBp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/btnBp"
        android:textColor="@color/white"
        android:textSize="@dimen/btnImcTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnCalcular"
        app:layout_constraintStart_toStartOf="@+id/btnCalcular"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular"
        app:layout_constraintVertical_bias="0.081" />

    <TextView
        android:id="@+id/cuidateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/takeCare"
        android:textColor="@color/black"
        android:textSize="@dimen/takeCareTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCalcular"
        app:layout_constraintVertical_bias="0.881" />
</androidx.constraintlayout.widget.ConstraintLayout>