<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#96CC67"
    android:backgroundTint="#AD7AB87D"
    android:hapticFeedbackEnabled="false"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/weigth"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <EditText
        android:id="@+id/high"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/weigth"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/weigth"
        app:layout_constraintTop_toBottomOf="@+id/weigth" />

    <TextView
        android:id="@+id/resultView"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        android:padding="4dp"
        android:paddingStart="4dp"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:text="0"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/resultbutton"
        app:layout_constraintTop_toBottomOf="@+id/resultbutton" />

    <Button
        android:id="@+id/resultbutton"
        android:layout_width="187dp"
        android:layout_height="63dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="84dp"
        android:background="#0E0E0E"
        android:backgroundTint="#AF684F"
        android:foregroundTint="#CA2424"
        android:text="@string/result"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:iconTint="#151212"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/high"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:rippleColor="#813232"
        app:strokeColor="#E13E3E" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="190dp"
        android:layout_height="80dp"
        android:text="@string/weight"
        android:textAlignment="center"
        android:textColor="#070606"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/weigth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/weigth"
        app:layout_constraintTop_toTopOf="@+id/weigth"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="190dp"
        android:layout_height="80dp"
        android:layout_marginTop="56dp"
        android:text="@string/high"
        android:textAlignment="center"
        android:textColor="#070606"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/high"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>